--- a/src/Components/ItemDetail/ItemDetail.css
+++ b/src/Components/ItemDetail/ItemDetail.css
@@ -23,6 +23,9 @@
     width: 50vh;
     height: 50vh;
 }
+.contentDetail{
+    margin: 10px;
+}
 
 .contentDetail h3{
     color: #005899;
@@ -42,4 +45,87 @@
     font-family: 'Amaranth', sans-serif;
     text-align: center;
     font-size: 60px;
+}
+
+@media screen and (min-width:1200px){    
+
+}
+@media screen and (max-width:992){    
+
+}
+@media screen and (max-width: 768px){
+    .contentDetail{
+        width: 100%;
+    }
+
+    .detailImage{
+        width: 50vh;
+        height: 50vh;
+    }
+
+    .contentDetail p{
+        margin: 10px;
+        font-size: 22px;
+    }
+
+}
+@media screen and (max-width: 576px) {
+    .contentDetail{
+        width: 100%;
+    }
+
+    .detailImage{
+        width: 50vh;
+        height: 50vh;
+    }
+
+    .contentDetail p{
+        margin: 10px;
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 425px){
+    .contentDetail{
+        width: 100%;
+    }
+
+    .detailImage{
+        width: 100%;
+    }
+
+    .contentDetail p{
+        margin: 10px;
+        font-size: 20px;
+    }
+
+}
+@media screen and (max-width: 390px){
+    .contentDetail{
+        width: 100%;
+    }
+
+    .detailImage{
+        width: 100%;
+    }
+
+    .contentDetail p{
+        margin: 10px;
+        font-size: 16px;
+    }
+
+}
+@media screen and (max-width: 320px){
+    .contentDetail{
+        width: 100%;
+    }
+
+    .detailImage{
+        width: 100%;
+    }
+
+    .contentDetail p{
+        margin: 10px;
+        font-size: 16px;
+    }
 }
