--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -3,7 +3,7 @@
 
 .divSponsors{
     display: inline-block;
-    margin: 40px;
+    margin: 50px !important;
 }
 .sectionCards{
     display: flex;
@@ -46,14 +46,18 @@
 
 }
 @media screen and (max-width: 768px){
-    .sectionCards{
-        padding-left: 10vh;
+    .divSponsors{
+        padding-left: 25px;
+    }
+
+    .sponsors{
+        height: 25vh;
+        width: 25vh;
     }
 }
 @media screen and (max-width: 576px) {
     .divSponsors{
-        display: inline-block;
-        margin: 50px 5px;
+        margin: 20px 70px !important;
     }
 
     .sponsors{
@@ -61,24 +65,36 @@
         width: 30vh;
     }
 }
-
-@media screen and (min-width: 320px){
+@media screen and (min-width: 425px) {
     .divSponsors{
-        margin: 30px 40px;
+        margin: 20px 50px !important;
     }
 
     .sponsors{
-        height: 25vh;
-        width: 25vh;
+        height: 20vh;
+        width: 20vh;
     }
 }
-@media screen and (max-width: 320px){
+@media screen and (min-width: 375px) {
     .divSponsors{
-        margin: 30px 15px;
+        margin: 25px 40px!important;
     }
 
     .sponsors{
-        height: 25vh;
-        width: 25vh;
+        height: 20vh;
+        width: 20vh;
+    }
+}
+
+
+
+@media screen and (max-width: 320px){
+    .divSponsors{
+        margin: 25px !important;
+    }
+
+    .sponsors{
+        height: 20vh;
+        width: 20vh;
     }
 }
