agregue layout y algunas fotos para carousel

--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -9,11 +9,12 @@
 }
 
 .carousel-item{
-    height: 85vh
+    height: 82vh
 }
 
 .img-carousel{
-    height: 85vh;
+    height: 82vh;
+    width: 100% !important;
 }
 
 @media screen and (min-width:1200px){  
