--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -3,7 +3,7 @@
 
 .divSponsors{
     display: inline-block;
-    margin: 50px !important;
+    margin: 50px;
 }
 .sectionCards{
     display: flex;
@@ -37,9 +37,13 @@
 .sponsors{
     height: 30vh;
     width: 30vh;
+    margin: 10px
 }
 
 @media screen and (min-width:1200px){    
+    .divSponsors{
+        padding-left: 25px;
+    }
 
 }
 @media screen and (max-width:992){    
@@ -67,7 +71,7 @@
 }
 @media screen and (min-width: 425px) {
     .divSponsors{
-        margin: 20px 50px !important;
+        margin: 25px 45px!important;
     }
 
     .sponsors{
@@ -77,7 +81,7 @@
 }
 @media screen and (min-width: 375px) {
     .divSponsors{
-        margin: 25px 40px!important;
+        margin: 25px 35px!important;
     }
 
     .sponsors{
@@ -90,7 +94,7 @@
 
 @media screen and (max-width: 320px){
     .divSponsors{
-        margin: 25px !important;
+        margin: 20px !important;
     }
 
     .sponsors{
