--- a/src/Components/Servicios/Servicios.css
+++ b/src/Components/Servicios/Servicios.css
@@ -10,7 +10,7 @@
 
 .alser {
     height: 100%;
-    margin: -6px;
+    margin: -8px;
     padding-right: 0px;
     background-position: center;
     background-size: cover;
@@ -19,7 +19,6 @@
     -webkit-animation-duration: 10s;
     animation-duration: 10s;
 }
-
 @keyframes rebotar {
     0% {
         opacity: 0;
@@ -34,6 +33,37 @@
     width: 100%;
     height: 86vh;
 }
+
+.divServicios{
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.imgServicios2{
+    height: 80vh;
+    width: 100vh;
+    -webkit-animation: rebotar;
+    animation: rebotar;
+    -webkit-animation-duration: 10s;
+    animation-duration: 10s;
+    
+}
+
+.divServicios3{
+    display: flex;
+    justify-content: center;
+}
+
+.imgServicios3{
+    height: 80vh;
+    width: 100vh;
+    -webkit-animation: rebotar;
+    animation: rebotar;
+    -webkit-animation-duration: 10s;
+    animation-duration: 10s;
+}
+
 
 .arser{
     color: #005899;
@@ -55,9 +85,6 @@
 
 
 @media screen and (max-width:1200px){    
-    .imgServicios{
-        height: 133vh;
-    }
     .alser{
         height: 100%;
         margin: 0;
@@ -66,6 +93,29 @@
     .arser{
         height: 100%;
         padding-left: 2vh;
+    }
+
+    .imgServicios{
+        width: 100%;
+        height: 130vh;
+        margin-top: -8px;
+    }
+
+    .divServicios{
+        display: flex;
+        padding-left: 0vh;
+        padding-right: 0vh;
+    }
+    .imgServicios2{
+        width: 100vh;
+    }
+
+    .divServicios3{
+        display: flex;
+    }
+
+    .imgServicios3{
+        width: 100vh;
     }
 
 }
@@ -82,7 +132,25 @@
 
     .imgServicios{
         width: 100%;
-        height: 134vh;
+        height: 130vh;
+        margin-top: -8px;
+    }
+
+    .divServicios{
+        display: flex;
+        padding-left: 0vh;
+        padding-right: 0vh;
+    }
+    .imgServicios2{
+        width: 80vh;
+    }
+
+    .divServicios3{
+        display: flex;
+    }
+
+    .imgServicios3{
+        width: 80vh;
     }
 
 }
@@ -102,6 +170,25 @@
     .imgServicios{
         width: 100%;
         height: 100vh;
+    }
+
+    .divServicios{
+        display: block;
+        padding-left: 0vh;
+        padding-right: 0vh;
+    }
+    .imgServicios2{
+        width: 100%;
+        height: 70vh;
+    }
+
+    .divServicios3{
+        display: block;
+    }
+
+    .imgServicios3{
+        width: 100%;
+        height: 70vh;
     }
 
 }
@@ -125,6 +212,26 @@
         width: 100%;
     }
 
+    .divServicios{
+        display: block;
+        padding-left: 0vh;
+        padding-right: 0vh;
+    }
+
+    .imgServicios2{
+        width: 100%;
+        height: 50vh;
+    }
+
+    .divServicios3{
+        display: block;
+    }
+
+    .imgServicios3{
+        width: 100%;
+        height: 50vh;
+    }
+
 
 }
 @media screen and (max-width: 320px){
@@ -143,6 +250,25 @@
     .imgServicios{
         height: 60vh;
         width: 100%;
+    }
+
+    .divServicios{
+        display: block;
+        padding-left: 0vh;
+        padding-right: 0vh;
+    }
+    .imgServicios2{
+        width: 100%;
+        height: 50vh;
+    }
+
+    .divServicios3{
+        display: block;
+    }
+
+    .imgServicios3{
+        width: 100%;
+        height: 50vh;
     }
 
 }
