--- a/src/Components/ItemDetail/ItemDetail.css
+++ b/src/Components/ItemDetail/ItemDetail.css
@@ -39,6 +39,14 @@
     text-align: left;
 }
 
+.titleDetail{
+    text-align: center;
+    color: #005899;
+    font-family: 'Amaranth', sans-serif;
+    text-align: center;
+    font-size: 50px;
+}
+
 
 @media screen and (min-width:1200px){    
 
